--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 /Sentiment/article_sarcasm_data
 /Sentiment/models
 /Sentiment/twitter_sentiment_data
- 
+/Performance/classification_beta
+/Performance/reviews_labeled.csv
